--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
 			<scope>runtime</scope>
         <optional>true</optional>
        </dependency>
+       
+       <!-- Thymeleaf -->
+       <dependency>
+   			 <groupId>org.springframework.boot</groupId>
+   			 <artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 		
 	</dependencies>
 
